# LinuxSystemMonitor

./: .gitignore  CMakeLists.txt  README.md
include/: mem.h  net.h  proc_paths.h  process.h  stat.h  systeminfo.h  ui_ncurses.h  uptime.h
src/: main.cpp  mem.cpp  process.cpp  stat.cpp  systeminfo.cpp  ui_ncurses.cpp  uptime.cpp
